# sigma-types

./: .envrc  .treefmt.nix  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
examples/: positive.rs
src/: all.rs  all_pairs.rs  finite.rs  invariant.rs  less_than.rs  lib.rs  negative.rs  non_negative.rs  non_positive.rs  non_zero.rs  on_unit.rs  one.rs  positive.rs  sigma.rs  sorted.rs  test.rs  zero.rs
