[package]
name = "sigma-types"
version = "0.3.7"
edition = "2024"
publish = true
authors = [ "Will Sturgeon" ]
description = "Types checked for an invariant."
readme = "README.md"
homepage = "https://github.com/wrsturgeon/sigma-types"
repository = "https://github.com/wrsturgeon/sigma-types"
license = "MPL-2.0"
keywords = [ "no_std", "no-std", "testing", "math", "mathematics" ]
categories = [ "data-structures", "development-tools", "mathematics", "no-std", "no-std::no-alloc" ]

[dependencies]

malachite-base = { version = "0.5.0", default-features = false, features = [  ], optional = true }
quickcheck = { version = "1.0.3", default-features = false, features = [  ], optional = true }
serde = { version = "1.0.218", default-features = false, features = [  ], optional = true }

[dev-dependencies]
paste = { version = "1.0.15", default-features = false, features = [  ] }
quickcheck = { version = "1.0.3", default-features = false, features = [  ] }
quickcheck_macros = { version = "1.0.0", default-features = false, features = [  ] }
serde_json = { version = "1.0.139", default-features = false, features = [ "std" ] }

[features]
malachite = [ "dep:malachite-base" ]
quickcheck = [ "dep:quickcheck" ]
serde = [ "dep:serde" ]
std = [  ]


